--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "gitea-vscode",
     "displayName": "Gitea-VSCode",
     "description": "Gitea Issue Tracker for vs-code",
-    "publisher": "IJustDev",
+    "publisher": "simchanu29",
     "version": "2.1.0",
     "engines": {
         "vscode": "^1.70.0"
@@ -20,12 +20,8 @@
     "contributes": {
         "viewsWelcome": [
             {
-                "view": "giteaIssues.opened-issues",
-                "contents": "Refresh to get Gitea opened issues .\n[Refresh](command:giteaIssues.refreshIssues)"
-            },
-            {
-                "view": "giteaIssues.closed-issues",
-                "contents": "Refresh to get Gitea closed issues .\n[Refresh](command:giteaIssues.refreshIssues)"
+                "view": "giteaIssues.repositories",
+                "contents": "Refresh to get Gitea issues .\n[Refresh](command:giteaIssues.refreshIssues)"
             }
         ],
         "viewsContainers": {
@@ -40,18 +36,14 @@
         "views": {
             "giteaIssues": [
                 {
-                    "id": "giteaIssues.opened-issues",
-                    "name": "Open Issues"
-                },
-                {
-                    "id": "giteaIssues.closed-issues",
-                    "name": "Closed Issues"
+                    "id": "giteaIssues.repositories",
+                    "name": "Repositories"
                 }
             ]
         },
         "commands": [
             {
-                "command": "giteaIssues.openIssue",
+                "command": "giteaIssues.showIssue",
                 "title": "Show"
             },
             {
@@ -61,6 +53,18 @@
                     "dark": "resources/dark/refresh.svg",
                     "light": "resources/light/refresh.svg"
                 }
+            },
+            {
+                "command": "giteaIssues.openIssue",
+                "title": "New issue"
+            },
+            {
+                "command": "giteaIssues.toogleIssue",
+                "title": "Close/Reopen issue"
+            },
+            {
+                "command": "giteaIssues.openRepoInBrowser",
+                "title": "Open in browser"
             }
         ],
         "menus": {
@@ -68,7 +72,21 @@
                 {
                     "command": "giteaIssues.refreshIssues",
                     "group": "navigation",
-                    "when": "view == giteaIssues.opened-issues"
+                    "when": "view == giteaIssues.repositories"
+                }
+            ],
+            "view/item/context": [
+                {
+                    "command": "giteaIssues.openIssue",
+                    "when": "view == giteaIssues.repositories && viewItem == repository"
+                },
+                {
+                    "command": "giteaIssues.openRepoInBrowser",
+                    "when": "view == giteaIssues.repositories && viewItem == repository"
+                },
+                {
+                    "command": "giteaIssues.openRepoInBrowser",
+                    "when": "view == giteaIssues.repositories && viewItem == issue"
                 }
             ]
         },
@@ -98,11 +116,14 @@
                     "default": "",
                     "description": "The username for the repository."
                 },
-                "gitea.repo": {
+                "gitea.repoList": {
+                    "type": "array",
                     "scope": "resource",
-                    "type": "string",
-                    "default": "",
-                    "description": "The repository name."
+                    "items": {
+                        "type": "string"
+                    },
+                    "default": [],
+                    "description": "The list of repository names."
                 },
                 "gitea.sslVerify": {
                     "scope": "resource",
@@ -110,7 +131,6 @@
                     "default": true,
                     "description": "true=Stop when cannot verify SSL certificate, false=Continue any way. Like git config 'sslVerify'."
                 },
-
                 "gitea.render": {
                     "scope": "resource",
                     "type": "string",
@@ -124,7 +144,7 @@
                         "Render Issue in html format"
                     ],
                     "description": "Choose render to show issues in editor"
-                }, 
+                },
                 "gitea.debug": {
                     "scope": "window",
                     "type": "boolean",
@@ -143,20 +163,21 @@
         "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
-        "@types/vscode": "^1.70.0",
+        "@types/markdown-it": "^12.2.3",
         "@types/mocha": "^9.1.1",
         "@types/node": "16.x",
-        "@types/markdown-it": "^12.2.3",
+        "@types/vscode": "^1.70.0",
         "eslint": "^8.20.0",
-        "typescript": "^4.7.4"
+        "typescript": "^4.9.3"
     },
     "dependencies": {
         "axios": "^0.27.2",
-        "markdown-it": "^13.0.1"
+        "markdown-it": "^13.0.1",
+        "vsce": "^2.15.0"
     },
     "repository": {
         "type": "github",
-        "url": "https://github.com/IJustdev/Gitea-VSCode.git"
+        "url": "https://github.com/simchanu29/Gitea-VSCode.git"
     },
     "license": "MIT"
 }
