--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Gitea-VSCode",
     "description": "Gitea Issue Tracker for vs-code",
     "publisher": "simchanu29",
-    "version": "2.2.0-0.1.1",
+    "version": "2.2.0-0.1.2",
     "engines": {
         "vscode": "^1.70.0"
     },
@@ -11,8 +11,7 @@
         "Other"
     ],
     "activationEvents": [
-        "onView:giteaIssues.opened-issues",
-        "onCommand:giteaIssues.initRepo",
+        "onView:giteaIssues.repositories",
         "onCommand:giteaIssues.refreshIssues"
     ],
     "main": "./out/extension.js",
