--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,13 @@
 		"outDir": "out",
 		"lib": [
 			"es6",
-            "ES2021.String"
+            "ES2021.String",
+            // "dom"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
+		"strict": true,   /* enable all strict type-checking options */
+        "skipLibCheck": true /* Not ok, need to understand why i need this */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
