--- a/package.json
+++ b/package.json
@@ -107,7 +107,6 @@
                 "command": "giteaVscode.openRepoInBrowser",
                 "title": "Open in browser"
             },
-            
             {
                 "command": "giteaVscode.openNotifInBrowser",
                 "title": "Open in browser"
@@ -251,6 +250,7 @@
         "@vscode/webview-ui-toolkit": "^1.2.0",
         "axios": "^0.27.2",
         "markdown-it": "^13.0.1",
+        "react": "^18.2.0",
         "tslint": "^6.1.3",
         "vsce": "^2.15.0"
     },
